Added Nick to speaker list, updated schedule format, reformatting
Added Nick to speaker list, updated schedule format, reformatting

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -2439,7 +2439,7 @@
 					<key>page34 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-01T18:49:20Z</date>
+						<date>2018-05-02T21:56:44Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -2594,6 +2594,16 @@
 								<key>Size</key>
 								<integer>12547</integer>
 							</dict>
+							<key>files/stacks-image-a3e2147-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								zgqZvEALTUts
+								d6df1U3bjQ==
+								</data>
+								<key>Size</key>
+								<integer>115798</integer>
+							</dict>
 							<key>files/stacks-image-bcdb310-250x261.png</key>
 							<dict>
 								<key>Digest</key>
@@ -2668,11 +2678,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								GDjdaNU0Ttns
-								G3dQ5hg8Ng==
+								/UOxwdPFLkvX
+								O+pe9kqctQ==
 								</data>
 								<key>Size</key>
-								<integer>162262</integer>
+								<integer>164788</integer>
 							</dict>
 							<key>files/stacks_page_page34.js</key>
 							<dict>
@@ -2688,11 +2698,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								urutFgBZp8Oi
-								npoUTwm1rA==
+								l+xeOKDYZcRX
+								uddw8pK8ZA==
 								</data>
 								<key>Size</key>
-								<integer>68506</integer>
+								<integer>70523</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -2705,7 +2715,7 @@
 					<key>page35 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-01T18:49:20Z</date>
+						<date>2018-05-02T21:56:44Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -2904,11 +2914,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								w7NGC1oBrX0Q
-								cBAz7XX6nw==
+								alG6IX2nE4yR
+								/9TuReC84w==
 								</data>
 								<key>Size</key>
-								<integer>158116</integer>
+								<integer>158454</integer>
 							</dict>
 							<key>files/stacks_page_page35.js</key>
 							<dict>
@@ -2924,11 +2934,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								y2zAjsnjrAny
-								CfDH0LOeVg==
+								btDGz2PGFI6G
+								CYA0m30N0g==
 								</data>
 								<key>Size</key>
-								<integer>65740</integer>
+								<integer>66248</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -2941,7 +2951,7 @@
 					<key>page36 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-01T18:49:20Z</date>
+						<date>2018-05-02T21:56:45Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3050,11 +3060,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								V/rOE1NsAeLC
-								CQlPWSHhvg==
+								NysTBqpKzmDb
+								J+1DxVsf5w==
 								</data>
 								<key>Size</key>
-								<integer>58228</integer>
+								<integer>58227</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -3759,7 +3769,7 @@
 					<key>page46 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-01T18:49:20Z</date>
+						<date>2018-05-02T21:56:44Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3813,6 +3823,16 @@
 								</data>
 								<key>Size</key>
 								<integer>7818</integer>
+							</dict>
+							<key>files/stacks-image-38af08b-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								zgqZvEALTUts
+								d6df1U3bjQ==
+								</data>
+								<key>Size</key>
+								<integer>115798</integer>
 							</dict>
 							<key>files/stacks-image-48ee80b-250x250.png</key>
 							<dict>
@@ -4078,18 +4098,18 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								/7CnlJV3iSBm
-								dqynr/7R4Q==
+								v0EQVwsbreIa
+								bqHSh3+0fA==
 								</data>
 								<key>Size</key>
-								<integer>181735</integer>
+								<integer>188639</integer>
 							</dict>
 							<key>files/stacks_page_page46.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								XTshYeu9Q/JU
-								R7p0to5MFg==
+								66jY4SVgiK9F
+								lgv8V15arw==
 								</data>
 								<key>Size</key>
 								<integer>31970</integer>
@@ -4108,11 +4128,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								yHp0c7oWWkis
-								JCPGIJu8KA==
+								HvKm01IAj/xf
+								4/6TmaMysw==
 								</data>
 								<key>Size</key>
-								<integer>97565</integer>
+								<integer>110307</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -4391,7 +4411,7 @@
 					<key>page48 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-04-23T22:08:43Z</date>
+						<date>2018-05-02T21:56:44Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4680,18 +4700,18 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								2RnWMxyVMuhF
-								gQKhZ+H9EQ==
+								tempKJxfkyYs
+								sTLQ20zGTw==
 								</data>
 								<key>Size</key>
-								<integer>181422</integer>
+								<integer>186804</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								8127//DgOwdn
-								Qrl/Idjm4g==
+								cEPgkHmFclIt
+								U2sH3Rg7fA==
 								</data>
 								<key>Size</key>
 								<integer>31970</integer>
@@ -4700,8 +4720,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								s0m9/PzD72Xp
-								m3JBkrZfzQ==
+								asS6houAG3U0
+								vky2WZQZ8A==
 								</data>
 								<key>Size</key>
 								<integer>922</integer>
@@ -4710,11 +4730,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								P5pW/I4j3Htj
-								7BfdwtAYbg==
+								PsBGqna5q7im
+								DtgXmfmXag==
 								</data>
 								<key>Size</key>
-								<integer>96347</integer>
+								<integer>102765</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -4727,7 +4747,7 @@
 					<key>page49 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-04-23T22:08:43Z</date>
+						<date>2018-05-02T21:56:45Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4956,11 +4976,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								HV2a5aDFayAa
-								A+wR1TvR8Q==
+								1djg2zG9jee0
+								y7ltzpr2mw==
 								</data>
 								<key>Size</key>
-								<integer>75506</integer>
+								<integer>75520</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
