--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-04-23T22:08:43Z</date>
+						<date>2018-05-02T21:56:44Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -322,18 +322,18 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								2RnWMxyVMuhF
-								gQKhZ+H9EQ==
+								tempKJxfkyYs
+								sTLQ20zGTw==
 								</data>
 								<key>Size</key>
-								<integer>181422</integer>
+								<integer>186804</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								8127//DgOwdn
-								Qrl/Idjm4g==
+								cEPgkHmFclIt
+								U2sH3Rg7fA==
 								</data>
 								<key>Size</key>
 								<integer>31970</integer>
@@ -342,8 +342,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								s0m9/PzD72Xp
-								m3JBkrZfzQ==
+								asS6houAG3U0
+								vky2WZQZ8A==
 								</data>
 								<key>Size</key>
 								<integer>922</integer>
@@ -352,11 +352,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								P5pW/I4j3Htj
-								7BfdwtAYbg==
+								PsBGqna5q7im
+								DtgXmfmXag==
 								</data>
 								<key>Size</key>
-								<integer>96347</integer>
+								<integer>102765</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
