--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-01T18:49:20Z</date>
+						<date>2018-05-02T21:56:44Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -232,11 +232,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								w7NGC1oBrX0Q
-								cBAz7XX6nw==
+								alG6IX2nE4yR
+								/9TuReC84w==
 								</data>
 								<key>Size</key>
-								<integer>158116</integer>
+								<integer>158454</integer>
 							</dict>
 							<key>files/stacks_page_page35.js</key>
 							<dict>
@@ -252,11 +252,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								y2zAjsnjrAny
-								CfDH0LOeVg==
+								btDGz2PGFI6G
+								CYA0m30N0g==
 								</data>
 								<key>Size</key>
-								<integer>65740</integer>
+								<integer>66248</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
