Added reading list to HW Symposia
Added reading list to HW Symposia

--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-02T21:56:44Z</date>
+						<date>2018-05-03T14:04:21Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -392,11 +392,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								HvKm01IAj/xf
-								4/6TmaMysw==
+								c/AAlY5gYlGu
+								NSIhovL4Vw==
 								</data>
 								<key>Size</key>
-								<integer>110307</integer>
+								<integer>110863</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
