Added Jim to CNWW
Added Jim to CNWW

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -3101,7 +3101,7 @@
 					<key>page36 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T15:18:20Z</date>
+						<date>2018-05-04T16:51:40Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3145,6 +3145,26 @@
 								</data>
 								<key>Size</key>
 								<integer>68548</integer>
+							</dict>
+							<key>files/stacks-image-1aebfb5-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								Er/+pE7hNNIn
+								W7FQzXekEQ==
+								</data>
+								<key>Size</key>
+								<integer>94699</integer>
+							</dict>
+							<key>files/stacks-image-1aebfb5-250x250@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								5xACEUvkvEwz
+								VJnG6F3YxQ==
+								</data>
+								<key>Size</key>
+								<integer>337058</integer>
 							</dict>
 							<key>files/stacks-image-48ee80b-250x250.png</key>
 							<dict>
@@ -3210,11 +3230,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								N4akl23CHDDS
-								+c50mUE5Tw==
+								5k21z/VlzBQw
+								mvli1Xg+AA==
 								</data>
 								<key>Size</key>
-								<integer>150901</integer>
+								<integer>153089</integer>
 							</dict>
 							<key>files/stacks_page_page36.js</key>
 							<dict>
@@ -3230,11 +3250,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								wDoc3TXNe/PS
-								YHm6UoXdJQ==
+								Bw50jdThsJme
+								4PIpW6RKzg==
 								</data>
 								<key>Size</key>
-								<integer>59861</integer>
+								<integer>61497</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -4867,7 +4887,7 @@
 					<key>page49 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T15:18:20Z</date>
+						<date>2018-05-04T16:51:40Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4911,6 +4931,26 @@
 								</data>
 								<key>Size</key>
 								<integer>68548</integer>
+							</dict>
+							<key>files/stacks-image-1aebfb5-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								Er/+pE7hNNIn
+								W7FQzXekEQ==
+								</data>
+								<key>Size</key>
+								<integer>94699</integer>
+							</dict>
+							<key>files/stacks-image-1aebfb5-250x250@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								5xACEUvkvEwz
+								VJnG6F3YxQ==
+								</data>
+								<key>Size</key>
+								<integer>337058</integer>
 							</dict>
 							<key>files/stacks-image-1e491bc-300x256.png</key>
 							<dict>
@@ -5106,11 +5146,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								pVZQIqQIybNP
-								yQnWkmBEVw==
+								uQRIxtL0FR0T
+								2MXIMn3Syg==
 								</data>
 								<key>Size</key>
-								<integer>160789</integer>
+								<integer>163801</integer>
 							</dict>
 							<key>files/stacks_page_page49.js</key>
 							<dict>
@@ -5126,11 +5166,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								2ove7nB//4Cr
-								T9JstVecCw==
+								ch6LpZzRUzOP
+								18YJIM35jA==
 								</data>
 								<key>Size</key>
-								<integer>81021</integer>
+								<integer>83858</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -5949,7 +5989,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T15:30:03Z</date>
+						<date>2018-05-04T16:51:40Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5998,11 +6038,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								qVKyAYL380v5
-								0z6QiVTlPw==
+								kEUw5h3X9TQH
+								g4MdI1XUtQ==
 								</data>
 								<key>Size</key>
-								<integer>4310</integer>
+								<integer>3254</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6015,7 +6055,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T15:18:20Z</date>
+						<date>2018-05-04T16:51:40Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7054,11 +7094,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								iJsGfjlNlHFn
-								0Jeao3FahA==
+								j1SCcxR2XOxu
+								a43ArJjjwg==
 								</data>
 								<key>Size</key>
-								<integer>2067</integer>
+								<integer>1971</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
