--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T15:18:20Z</date>
+						<date>2018-05-04T16:51:40Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -77,6 +77,26 @@
 								</data>
 								<key>Size</key>
 								<integer>68548</integer>
+							</dict>
+							<key>files/stacks-image-1aebfb5-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								Er/+pE7hNNIn
+								W7FQzXekEQ==
+								</data>
+								<key>Size</key>
+								<integer>94699</integer>
+							</dict>
+							<key>files/stacks-image-1aebfb5-250x250@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								5xACEUvkvEwz
+								VJnG6F3YxQ==
+								</data>
+								<key>Size</key>
+								<integer>337058</integer>
 							</dict>
 							<key>files/stacks-image-48ee80b-250x250.png</key>
 							<dict>
@@ -142,11 +162,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								N4akl23CHDDS
-								+c50mUE5Tw==
+								5k21z/VlzBQw
+								mvli1Xg+AA==
 								</data>
 								<key>Size</key>
-								<integer>150901</integer>
+								<integer>153089</integer>
 							</dict>
 							<key>files/stacks_page_page36.js</key>
 							<dict>
@@ -162,11 +182,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								wDoc3TXNe/PS
-								YHm6UoXdJQ==
+								Bw50jdThsJme
+								4PIpW6RKzg==
 								</data>
 								<key>Size</key>
-								<integer>59861</integer>
+								<integer>61497</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
